Fix T65850 Sculpt: Vertices not hidden if using shape keys